Archive2/85/b07630e6d594a0/output
main.cpp: In function 'long unsigned int string2ip(std::string)':
main.cpp:25:24: error: 'InvalidIp' was not declared in this scope
       throw InvalidIp(s);
                        ^
main.cpp: In function 'std::string host2ipString(std::string)':
main.cpp:34:8: warning: unused variable 'ret' [-Wunused-variable]
    int ret = getaddrinfo(host.c_str(), NULL, NULL, &addrinfos);
        ^
main.cpp:52:8: warning: unused variable 'foo' [-Wunused-variable]
    int foo = 123;
        ^
main.cpp:55:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
